--- a/components/maps/MainMap/MapSidebar.module.scss
+++ b/components/maps/MainMap/MapSidebar.module.scss
@@ -2,6 +2,7 @@
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	overflow-y: scroll;
 	padding: var(--spacing-medium);
 	padding-top: 3.5rem;
 	background: var(--primary-background-translucent);
