--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 :root {
 	--primary-background: #{hsl(220, 95%, 8%)};
-	--primary-background-translucent: #{hsla(220, 95%, 8%, 0.85)};
+	--primary-background-translucent: #{hsla(220, 95%, 8%, 0.95)};
 	--secondary-background: #{hsla(251, 70%, 6%, 0.95)};
 	--accent-1: #{hsla(41, 77, 60, 1)};
 	--accent-2: #{hsla(180, 60, 49, 1)};
